Added and Improved the Aether Scan UI on the Software Side